2010-03-16 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/ddir.pl (Tree): Sort directory entries.

2010-03-15 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/ddir.pl:
	Set up roject at github.com.
	(top level): Add proper function banners. GPL etc.
	(top level::Standard perl modules): Add many more modules.
	(top level::Globals): Add version variable.
	(Initialize): New.
	(Help): New. Convert old roff into POD. Add many, many options.
	(HelpExclude): New.
	(HandleCommandLineArgs): New.

2003-01-28  Jari Aalto  <jari.aalto@cante.net>

        * bin/ddir.pl: Do not use #!/usr/local/bin/perl, but
        only #!perl. Suppose perl is along path.

1995-05-17 Thu  Jari Aalto  <jari.aalto@cante.net>

        * bin/ddir.pl: Initial version.