@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "DDIR 1"
-.TH DDIR 1 "2010-03-15" "perl v5.10.1" "cvs status - formatter"
+.TH DDIR 1 "2010-03-16" "perl v5.10.1" "cvs status - formatter"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
